# Realm-Warp

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  docker-compose.yml  pyproject.toml
api/: .gitignore  Dockerfile  pyproject.toml
api/app/: main.py  models.py
api/app/api/: api_messages.py  api_router.py  deps.py
api/app/api/endpoints/: auth.py  leaderboard.py  summoners.py  users.py
api/app/core/: config.py  database.py  database_session.py  riot_client.py  utils.py
api/app/schemas/: requests.py  responses.py
api/app/tests/: conftest.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  requirements.txt
backend/api/: .env.sample  Dockerfile  main.py  requirements.txt  runner.py
backend/api/app/: main.py
backend/api/app/api/api_v1/: router.py
backend/api/app/api/api_v1/endpoints/: summoner.py
backend/api/app/core/: config.py
backend/api/app/crud/: crud_summoner.py
backend/api/app/models/: summoner.py
backend/api/app/schemas/: summoner.py
backend/api/classes/: rankedentries.py  regions.py  summoner.py
backend/api/v1/: routes.py
backend/api/v1/endpoints/: summoner.py  users.py
backend/services/summoner_watcher/: main.py  requirements.txt
backend/services/summoner_watcher/module/: __init__.py  pyotconf.py  summoner_watcher.py
backend/services/tracker/: Dockerfile  main.py  requirements.txt  tracker.py
backend/services/tracker/module/: pyotconf.py  tracker.py
backend/utils/: routing.py
backend/worker/: Dockerfile  requirements.txt  tracker.py
backend/worker/logs/: .gitignore
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
libs/db_models/: pyproject.toml
libs/db_models/db_models/: models.py
rate_limiter/: Dockerfile  main.py  pyproject.toml
ratelimiter/: Dockerfile  main.py  pyproject.toml
scripts/: add_summoner.py  setup.dev.sh  start.dev.sh  start.prod.sh
services/api/: Dockerfile  init.sh  pyproject.toml
services/api/app/: conftest.py  initial_data.py
services/api/app/api/: api.py
services/api/app/api/endpoints/: auth.py  summoners.py
services/api/app/core/: config.py  db.py  pulsfire_session.py  security.py  utils.py
services/api/app/schemas/: requests.py  responses.py
services/ratelimiter/: Dockerfile  pyproject.toml
services/watcher/: Dockerfile  main.py  pyproject.toml
watcher/: Dockerfile  main.py  pyproject.toml
