[tool.poetry]
package-mode = false
name = "project-template"
version = "0.1.0"
description = ""
authors = ["Renja <renja.grotemeyer@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]
ignore = [
  "E741"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
