[project]
name = "realm-warp-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi>=0.115.4",
    "motor>=3.6.0",
    "orjson>=3.10.10",
    "pulsefire>=2.0.20",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
]
