[tool.poetry]
package-mode = false
name = "ratelimiter"
version = "0.1.0"
description = ""
authors = ["Renja <renja.grotemeyer@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pulsefire = "^2.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"